# sfdd

./: .gitignore  LICENSE  README.md  pyproject.toml
corrfdd/: __init__.py  detector.py  diagnosis.py  exceptions.py  metrics.py  monitor.py  ros_adapter.py  segmentation.py
examples/: custom_robot.py  quickstart.py  ros_bag.py  streaming.py
sfdd/: __init__.py  detector.py  diagnosis.py  exceptions.py  metrics.py  monitor.py  ros_adapter.py  segmentation.py
tests/: conftest.py  test_detector.py  test_diagnosis.py  test_metrics.py  test_monitor.py  test_ros_adapter.py  test_segmentation.py
